[metadata]
name = vfus
version = 1.0.0
description = Simple Test
long_description = file: readme.md
url = https://github.com/vfus/vfus
license = MIT
author = Progressify
author_email = info@vfus.it
keywords = sunsky, api, e-commerce, dropshipping
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
install_requires =
    configparser
    requests
[options]
zip_safe = False
python_requires = >= 3.7
test_suite = tests
packages =
    vfus
[bdist_wheel]
universal=0