[metadata]
name = vfus
version = 1.0.1
description = You can easily download all Hacking Tool by VFUS
long_description = file: readme.md
url = https://github.com/vfus/vfus
license = MIT
author = xHuvvy
author_email = info@vfus.it
keywords = ethical hacker, hacking python, hacking tool
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
install_requires =
    configparser
    requests
[options]
zip_safe = False
python_requires = >= 3.7
test_suite = tests
packages =
    vfus
[bdist_wheel]
universal=0